# TestTasks

./: CMakeLists.txt
Task_1/sources/: main.cpp
Task_2/data/: departments_data2.xml
Task_2/include/: departments.hpp  invoker.hpp  menu.hpp  parser.hpp
Task_2/sources/: departments.cpp  invoker.cpp  main.cpp  menu.cpp  parser.cpp
Task_2/tests/: test.cpp
